virt01/manual/tools/stirling-pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-ingress
  namespace: tools
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  rules:
  - host: stirling.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: stirling-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - stirling.k3s.nf.lab
    secretName: stirling-tls
